fix overflow on mobile

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   width: 300px;
   height: 300px;
   margin: auto;
+  overflow: hidden;
 }
 
 .container {
